# FreeCAD

./: cam_path_surface_recompute.py  trackperf.py
cMake/: FreeCadMacros.cmake
src/: FCPython.h
src/App/: ApplicationDirectories.cpp  ApplicationDirectoriesPyImp.cpp  CMakeLists.txt  MeasureManager.h
src/Base/: CMakeLists.txt  ConsoleObserver.cpp  PreCompiled.h  PyExport.h  PyTools.h  PyWrapParseTupleAndKeywords.h
src/Gui/: CMakeLists.txt  InventorAll.h  InventorBasic.h  Macro.cpp  PythonConsole.h  PythonTracing.h  SoFCDB.h  Utilities.h  View3DInventorViewer.h  ViewProviderDocumentObject.h
src/Gui/Quarter/: KeyboardP.cpp
src/Gui/Selection/: SoFCUnifiedSelection.h
src/Mod/CAM/: CMakeLists.txt
src/Mod/CAM/Gui/: PreCompiled.h
src/Mod/CAM/libarea/: CMakeLists.txt
src/Mod/Fem/App/: FemMesh.cpp  FemMeshPyImp.cpp  FemMeshShapeNetgenObject.cpp  FemPostBranchFilter.cpp  FemPostBranchFilterPyImp.cpp  FemPostFilter.cpp  FemPostFilterPyImp.cpp  FemPostObjectPyImp.cpp  FemPostPipeline.cpp  FemPostPipelinePyImp.cpp  FemVTKTools.cpp  PreCompiled.h  PropertyPostDataObject.cpp
src/Mod/Fem/Gui/: PreCompiled.h
src/Mod/Inspection/Gui/: PreCompiled.h
src/Mod/Material/App/: CMakeLists.txt
src/Mod/Measure/App/: AppMeasurePy.cpp
src/Mod/Measure/Gui/: PreCompiled.h
src/Mod/Mesh/Gui/: CMakeLists.txt  MeshSelection.h
src/Mod/MeshPart/Gui/: PreCompiled.h
src/Mod/Part/App/: CMakeLists.txt
src/Mod/Part/Gui/: PreCompiled.h  SoBrepEdgeSet.h
tests/src/Base/: InventorBuilder.cpp  Translate.cpp
tests/src/Gui/: Camera.cpp
tests/src/Misc/: CMakeLists.txt
(+16 files in other folders)
